finalized nav and project grid layouts

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             <!-- Begin Top Nav -->
             <div id="top-nav">
                 <nav>
-                    <div id="place-holder-logo" class="nav-item">Logo</div>
+                    <div id="nav-items">
+                    <div id="place-holder-logo">Logo</div>  
                     <ul>
-                        <li class="nav-item">About</li>
-                        <li class="nav-item">中文</li>
+                        <li>About</li>
+                        <li>中文</li>
                     </ul>
+                    </div>
                 </nav>
-                <div>
+                </div>
 
                     <!-- Begin Page Content -->
                     <div id="project-content">
