--- a/index.html
+++ b/index.html
@@ -19,100 +19,105 @@
             <![endif]-->
             
             <!-- Begin Top Nav -->
-            <div id="top-nav">
+            <header id="top-nav">
                 <nav>
                     <div id="nav-items">
-                    <div id="place-holder-logo">Logo</div>  
-                    <ul>
-                        <li>About</li>
-                        <li>中文</li>
-                    </ul>
+                        <div id="place-holder-logo">Logo</div>  
+                        <ul>
+                            <li>About</li>
+                            <li>中文</li>
+                        </ul>
                     </div>
                 </nav>
+            </header>
+
+            <!-- Begin Page Content -->
+            <div id="project-content">
+
+                <div id="project-header">
+
+                    <h1>Chris Mlynarski</h1>
+
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
+
                 </div>
 
-                    <!-- Begin Page Content -->
-                    <div id="project-content">
+                <div id="project-grid">
 
-                        <div id="project-header">
-
-                            <h1>Chris Mlynarski</h1>
-
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
-
-                        </div>
-
-                        <div id="project-grid">
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                            <div>
-                                <img src="">
-                                <h3>Project Title</h3>
-                                <h4>Title and Timeframe</h4>
-                                <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
-                            </div>
-
-                        </div>
-
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.I did some pretty amazing things on this project and you should definitely check it out.</p>
                     </div>
 
-                    <!-- Begin Footer -->
-                    <footer>
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    </div>
+
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    </div>
+
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    </div>
+
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    </div>
+
+                    <div>
+                        <img src="">
+                        <h3>Project Title</h3>
+                        <h4>Title and Timeframe</h4>
+                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- Begin Footer -->
+            <footer>
+                <div id="footer-content">
+                    <div id="footer-items">
+                        <p>Chris Mlynarski (copyright symbol here)</p>
+
                         <div>
-                            <p>Chris Mlynarski (copyright symbol here)</p>
-                            <p>cmlynars@gmail.com</p>
-                            <i id="linked-in-here"></i>
+                        <p>cmlynars@gmail.com</p>
+                        <i id="linked-in-logo">dfasfdsf</i>
                         </div>
-                    </footer>
+                    </div>
+                </div>
+            </footer>
 
 
-                    <!-- Begin Javascript -->
-                    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-                    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-                    <script src="js/main.js"></script>
+            <!-- Begin Javascript -->
+            <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+            <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+            <script src="js/main.js"></script>
 
-                    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-                    <script>
-                        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-                        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-                        e.src='https://www.google-analytics.com/analytics.js';
-                        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-                    </script>
-                </body>
-                </html>
+            <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+            <script>
+                (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+                    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+                e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+                e.src='https://www.google-analytics.com/analytics.js';
+                r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+                ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            </script>
+        </body>
+        </html>
