added spacing styles to home

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Begin Top Nav -->
             <header id="top-nav">
                 <nav>
-                    <div id="nav-items">
+                    <div class="nav-items">
                         <div id="place-holder-logo">Logo</div>  
                         <ul>
                             <li>About</li>
@@ -34,56 +34,68 @@
             <!-- Begin Page Content -->
             <div id="project-content">
 
-                <div id="project-header">
+                <div class="project-header">
 
-                    <h1>Chris Mlynarski</h1>
+                    <h1 class="site-title">Chris Mlynarski</h1>
 
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
+                    <h2 class="site-byline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
 
                 </div>
 
                 <div id="project-grid">
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="">
-                        <h4>Title and Timeframe</h4>
-                        <h3>Project Title</h3>
-                        <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                    <div class="project-card">
+                        <div class="card-image"></div>  
+                        <div class="card-content">
+                            <h4>Title and Timeframe</h4>
+                            <h3>Project Title</h3>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                        </div>
                     </div>
 
                 </div>
@@ -97,8 +109,8 @@
                         <p>Chris Mlynarski (copyright symbol here)</p>
 
                         <div>
-                        <p>cmlynars@gmail.com</p>
-                        <i id="linked-in-logo">dfasfdsf</i>
+                            <p>cmlynars@gmail.com</p>
+                            <i id="linked-in-logo">dfasfdsf</i>
                         </div>
                     </div>
                 </div>
