improvemnts to  project grid page

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <![endif]-->
             
             <!-- Begin Top Nav -->
-            <header id="top-nav">
+            <header>
                 <nav>
-                    <div class="nav-items">
+                    <div class="nav-container">
                         <div id="place-holder-logo">Logo</div>  
                         <ul>
-                            <li>About</li>
-                            <li>中文</li>
+                            <li class="nav-item">About</li>
+                            <li class="nav-item">中文</li>
                         </ul>
                     </div>
                 </nav>
             </header>
 
             <!-- Begin Page Content -->
-            <div id="project-content">
+            <div class="project-content">
 
                 <div class="project-header">
 
@@ -42,14 +42,14 @@
 
                 </div>
 
-                <div id="project-grid">
+                <div class="project-grid">
 
                     <div class="project-card">
                         <div class="card-image"></div>
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
                         </div>
                     </div>
 
@@ -58,7 +58,7 @@
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project.</p>
                         </div>
                     </div>
 
@@ -67,7 +67,7 @@
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project.</p>
                         </div>
                     </div>
 
@@ -76,7 +76,7 @@
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
                         </div>
                     </div>
 
@@ -85,7 +85,7 @@
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
                         </div>
                     </div>
 
@@ -94,7 +94,7 @@
                         <div class="card-content">
                             <h4>Title and Timeframe</h4>
                             <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            <p>I did some pretty amazing things on this project.</p>
                         </div>
                     </div>
 
@@ -104,12 +104,12 @@
 
             <!-- Begin Footer -->
             <footer>
-                <div id="footer-content">
-                    <div id="footer-items">
+                <div class="footer-content">
+                    <div class="footer-items">
                         <p>Chris Mlynarski (copyright symbol here)</p>
 
-                        <div>
-                            <p>cmlynars@gmail.com</p>
+                        <div class="contact-container">
+                            <p class="email">cmlynars@gmail.com</p>
                             <i id="linked-in-logo">dfasfdsf</i>
                         </div>
                     </div>
