further work on layouts and styling

--- a/projects/avant.html
+++ b/projects/avant.html
@@ -16,17 +16,13 @@
 
 <body>
 	
-	<section id="project-content-container">
+	<section class="project-content-container">
 	
-	<div id="breadcrumb-container">
+	<div class="breadcrumb-container">
 	Breadcrumb Content
-	<div>
-
-	<div id="image-container">
-		Image goes here
 	</div>
 
-	<div id="description-container">
+	<div class="description-container">
 	<h3 class="project-title">
 	Avant
 	</h3>
@@ -34,7 +30,10 @@
 	<p>
 	This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done.
 	</p>
+	</div>
 
+	<div class="image-container">
+		Image goes here
 	</div>
 
 	</section>
