further updates to structure and styling

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <!-- Begin Footer -->
             <footer>
                 <div class="footer-content">
-                    <div class="footer-items">
-                        <p>Chris Mlynarski (copyright symbol here)</p>
+                    <div class="footer-wrapper">
+                        <p class="footer-item">Chris Mlynarski (copyright symbol here)</p>
 
                         <div class="contact-container">
-                            <p class="email">cmlynars@gmail.com</p>
-                            <i id="linked-in-logo">dfasfdsf</i>
+                            <p class="email footer-item">cmlynars@gmail.com</p>
+                            <i class=".footer-item" id="linked-in-logo footer-item">dfasfdsf</i>
                         </div>
                     </div>
                 </div>
