--- a/index.html
+++ b/index.html
@@ -32,85 +32,89 @@
             </header>
 
             <!-- Begin Page Content -->
+            
+            <div class="background">
+
             <div class="project-content">
 
-                <div class="project-header">
+                    <div class="project-header">
 
-                    <h1 class="site-title">Chris Mlynarski</h1>
+                        <h1 class="site-title">Chris Mlynarski</h1>
 
-                    <h2 class="site-byline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
+                        <h2 class="site-byline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec portitor imperdiet diam id suscipit.</h2>
 
+                    </div>
+
+                    <div class="project-grid">
+
+                        <div class="project-card">
+                            <div class="card-image"></div>
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="card-image"></div>
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project.</p>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="card-image"></div>
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project.</p>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="card-image"></div>
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="card-image"></div>
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="card-image"></div>  
+                            <div class="card-content">
+                                <h4>Title and Timeframe</h4>
+                                <h3>Project Title</h3>
+                                <p>I did some pretty amazing things on this project.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    </div>
                 </div>
 
-                <div class="project-grid">
+                <!-- Begin Footer -->
+                <footer>
+                    <div class="footer-content">
+                        <div class="footer-wrapper">
+                            <p class="footer-item">Chris Mlynarski (copyright symbol here)</p>
 
-                    <div class="project-card">
-                        <div class="card-image"></div>
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image"></div>
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project.</p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image"></div>
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project.</p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image"></div>
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image"></div>
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project and you should definitely check it out. I did some pretty amazing things on this project and you should definitely check it out.</p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image"></div>  
-                        <div class="card-content">
-                            <h4>Title and Timeframe</h4>
-                            <h3>Project Title</h3>
-                            <p>I did some pretty amazing things on this project.</p>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <!-- Begin Footer -->
-            <footer>
-                <div class="footer-content">
-                    <div class="footer-wrapper">
-                        <p class="footer-item">Chris Mlynarski (copyright symbol here)</p>
-
-                        <div class="contact-container">
-                            <p class="email footer-item">cmlynars@gmail.com</p>
-                            <i class=".footer-item" id="linked-in-logo footer-item">dfasfdsf</i>
+                            <div class="contact-container">
+                                <p class="email footer-item">cmlynars@gmail.com</p>
+                                <i class=".footer-item" id="linked-in-logo footer-item">dfasfdsf</i>
+                            </div>
                         </div>
                     </div>
                 </div>
