--- a/about.html
+++ b/about.html
@@ -2,3 +2,15 @@
 title: About
 layout: default
 ---
+
+<div class="page-container">
+	<section class="image-container">
+		<img src="{{ site.baseurl}}/img/placeholder.jpg">
+	</section>
+
+	<article class="about-blurb">
+	<h4>adfdsfasf</h4>
+	<h3>dafasdfasdfsf</h3>
+	<p>adfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsaf</p>
+	</article>
+</div>
