relative sizing updates

--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@ layout: default
 	<article class="about-blurb">
 	<h4>adfdsfasf</h4>
 	<h3>dafasdfasdfsf</h3>
-	<p>adfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsafadfasdfasdfsfsaf</p>
+	<p>This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content.</p>
 	</article>
 </div>
