--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@ title: About
 layout: default
 ---
 
-<div class="page-container">
-	<section class="image-container">
+<div class="about_page-container">
+	<section class="about_image-container">
 		<img src="{{ site.baseurl}}/img/placeholder.jpg">
 	</section>
 
