finalized index and project page design

--- a/about.html
+++ b/about.html
@@ -3,13 +3,12 @@ title: About
 layout: default
 ---
 
-<div class="about_page-container">
+<div class="buffer about_page-container">
 	<section class="about_image-container">
 		<img src="{{ site.baseurl}}/img/placeholder.jpg">
 	</section>
 
 	<article class="about-blurb">
-	<h4>adfdsfasf</h4>
 	<h3>dafasdfasdfsf</h3>
 	<p>This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content. This is example content.</p>
 	</article>
