--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@ layout: default
             <a class="project-card {% if projects.importance == 'primary' %} primary-card {% endif %}" href="{{ site.baseurl }}{{ projects.url }}">                    
                  <div class="card-image" style="background-image: url({{ site.baseurl}}/img/index/{{ projects.card_image }}");"></div>
                     <div class="card-content">
-                        <h4>{{ projects.role }} {% if projects.date %}• {{ projects.date }}{% endif %}</h4>
+                    <div class="card-details">
+                        <h4>{{ projects.role }}</h4> 
+                        <h5>
+                        {% if projects.date %}{{ projects.date }}{% endif %}
+                        </h5>
+                    </div>
                         <h3>{{ projects.pretty_title }}</h3>
                         <p>{{ projects.description }}</p>
                     </div> 
