--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 ---
-title: About
+title: about
 layout: default
 ---
 
 <div class="buffer about_page-container">
 	<section class="about_image-container">
-		<img src="{{ site.baseurl}}/img/placeholder.jpg">
+		<img src="{{ site.baseurl}}/img/about.jpg">
 	</section>
 
 	<article class="about-blurb">
@@ -16,5 +16,7 @@ layout: default
 	After returning from China, I continued my study of design by taking classes at General Assembly in D.C. and the School of the Art Institute in Chicago. This led me to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/morningstar.html" target="_blank">Morningstar</a> and eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/avant.html" target="_blank">Avant</a>.
 	<br><br>
 	I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question ethics, politics, and conventional thinking.</p>
+	<br><br>
+	<p><a class="inline-link" href="{{ site.baseurl }}/">View all projects</a></p>
 	</article>
 </div>
