new theme styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ layout: default
                     </div>
                         <h3>{{ projects.pretty_title }}</h3>
                         <p>{{ projects.description }}</p>
-                    </div> 
+                        <p class="inline-link">View project</p> 
+                    </div>
             </a>
 
             {% endif %}
