--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@ layout: default
 	<br><br>
 	I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question ethics, politics, and conventional thinking.</p>
 	<br><br>
-	<p><a class="inline-link" href="{{ site.baseurl }}/">View all projects</a></p>
+	<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="{{ site.baseurl }}/">View all projects</a></p>
 	</article>
 </div>
